[releng] ensure "org.eclipse.osgi.compatibility.state" fragment is installed during tests. workaround as described at http://dev.eclipse.org/mhonarc/lists/tycho-user/msg03277.html
Change-Id: Id43e82cd86339b11f5b78b3355fbf7025201e3a9