@@ -27,6 +27,22 @@
 		<plugins>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>target-platform-configuration</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+				<dependency-resolution>
+					<extraRequirements>
+						<requirement>
+							<type>eclipse-plugin</type>
+							<id>org.eclipse.osgi.compatibility.state</id>
+							<versionRange>1.0.0</versionRange>
+						</requirement>
+					</extraRequirements>
+				</dependency-resolution>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<version>${tycho-version}</version>
 				<executions>
@@ -55,6 +71,9 @@
 				<configuration>
 					<useUIHarness>true</useUIHarness>
 					<testSuite>org.eclipse.gmf.tests</testSuite>
+					<!-- 
+						<argLine>${tycho.testArgLine} -Xmx2g -XX:MaxPermSize=256m -XstartOnFirstThread -DbuildingWithTycho=true</argLine>
+					-->
 					<argLine>${tycho.testArgLine} -Xmx768m -XX:MaxPermSize=128m -DbuildingWithTycho=true</argLine>
 					<bundleStartLevel>
 						<bundle>
